--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -24,7 +24,7 @@
 
 .img-logo {
     max-width:150x;
-    max-height:50px;
+    max-height:52px;
     width: auto;
     height: auto;
 }
@@ -109,4 +109,106 @@
 
 .card-data{
 
+}
+
+footer{
+    display: block;
+    color: white;
+    text-align: center;
+}
+
+
+.yellow{
+    border-left: 4px solid yellow;
+}
+
+.green {
+    border-left: 4px solid #3bb54a;
+  }
+   
+  .red {
+    border-left: 4px solid #b3404a;
+  }
+
+
+  /*========== RESPONSIVO ==========*/
+
+@media screen and (max-width: 1470px){
+    .card{
+        flex-direction: column;
+        justify-content: space-between;
+        height: 500px;
+        max-width: 18.75rem;
+    }
+}
+
+@media screen and (max-width: 1300px){
+    .titulo-pagina{
+        font-size: 1.5rem;
+    }
+
+    .conteudo-principal{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        column-gap: 10px;
+        padding: 0 50px;
+    }
+
+    .card{
+        width: 30%;
+        height: 500px;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 922px){
+    .titulo-pagina{
+        font-size: 1.5rem;
+    }
+
+    .card{
+        width: 40%;
+        height: 400px;
+        max-width: 18.75rem;
+        margin-bottom: 20px;
+    }
+
+    .card-titulo{
+        padding: 8px;
+        font-size:1.2rem;
+    }
+    
+    .card-img{
+        width:100%;
+        height: 150px
+    }
+    
+    .card-titulo-post{
+        margin-top: 5px;
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    
+    .card-texto{
+        padding: 8px;
+        font-size: 16px;
+    }
+    
+    .card-data{
+    
+    }
+ }
+
+
+@media screen and (max-width: 648px){
+    .conteudo-principal{
+        flex-direction: column;
+    }
+
+    .card{
+        width: 60%;
+        height: 400px;
+        
+    }
 }
