--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -132,11 +132,7 @@ header{
     text-shadow: 0px 0px 5px black;
 }
 
-.card-titulo{
-    padding-top: 20px;
-    font-size:1rem;
-    font-weight: 700;
-}
+
 
 .card-img{
     width:100%;
@@ -170,8 +166,12 @@ header{
     height: 2rem;
 }
 
-.card-data{
-    padding: 10px;
+
+.card-rodape{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 10px;
+
 }
 
 footer{
@@ -193,106 +193,27 @@ footer{
 }
 
 @media screen and (max-width: 1300px){
-    .titulo-pagina{
+    .titulo-conteudo-principal{
+        font-size: 40px;
+    }
+    
+    .card-titulo-post{
         font-size: 1.5rem;
     }
-
-    .menu-nav a{
-        font-size: 1.1rem;
-        margin-right: 0.8rem;
-        padding: 0.5rem;
-    }
-
-    .conteudo-principal{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        column-gap: 10px;
-        padding: 0 50px;
-    }
-
-    .card{
-        width: 30%;
-        height: 500px;
-        margin-bottom: 20px;
+    
+    .card-texto{
+        padding: 10px;
+        font-size: 1.2rem;
+        text-align: justify;
+        height: 13.25rem;
     }
 }
 
 @media screen and (max-width: 922px){
-    .titulo-pagina{
-        font-size: 1.5rem;
-    }
-
-    .img-logo {
-        max-width:110x;
-        max-height: 35px;
-    }
-
-    .menu-nav a{
-        font-size: 1rem;
-        margin-right: 0.5rem;
-        padding: 0.2rem;
-    }
-
-    .card{
-        width: 45%;
-        height: 400px;
-        max-width: 18.75rem;
-        margin-bottom: 20px;
-    }
-
-    .card-titulo{
-        padding: 8px;
-        font-size:1.2rem;
-    }
     
-    .card-img{
-        width:100%;
-        height: 150px
-    }
-    
-    .card-titulo-post{
-        margin-top: 5px;
-        font-size: 1.2rem;
-        font-weight: bold;
-    }
-    
-    .card-texto{
-        padding: 8px;
-        font-size: 16px;
-    }
-    
-    .card-data{
-    
-    }
  }
 
 
 @media screen and (max-width: 648px){
-    .cabecalho{
-        justify-content:center
-    }
-
-    .titulo-pagina{
-        display: flex;
-        flex-direction: column;
-        font-size: 1.5rem;
-    }
-
-    .titulo-pagina img{
-        display: none;
-    }
-
-    .menu-nav{
-        display: none;
-    }
-    .conteudo-principal{
-        flex-direction: column;
-    }
-
-    .card{
-        width: 60%;
-        height: 400px;
-        
-    }
+    
 }
