--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -13,7 +13,7 @@
     margin: 0 auto;
     display: flex;
     gap:2%;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 1rem 2rem;
     font-family: 'Roboto Condensed', sans-serif;
@@ -46,7 +46,7 @@ header{
 
 .menu-nav a:hover{
     color:rgb(3, 3, 29);
-    background-color: white;
+    background-color: #494949;
     font-weight: bold;
 }
 
@@ -151,6 +151,7 @@ header{
     padding: 1.5rem;
     font-size: 1rem;
     line-height: 1.4rem;
+    margin-bottom: 20px;
     text-align: justify;
 }
 
@@ -182,6 +183,10 @@ footer{
     text-align: center;
 }
 
+.esconder{
+    display: none;
+}
+
 
  /* ========== RESPONSIVO ========== */
 
@@ -190,6 +195,8 @@ footer{
         max-width: 100vw;
         flex-wrap: wrap;
         justify-content: space-around;
+        gap:0.7%;
+        }
     }
 
     .menu-nav a{
@@ -199,8 +206,8 @@ footer{
 
     .card{
         margin-bottom: 50px;
-        height: 700px;
-        width: 450px;
+        height: auto;
+        width: 380px;
     }
 
     .titulo-conteudo-principal{
@@ -208,17 +215,17 @@ footer{
     }
     
     .card-titulo-post{
-        font-size: 2rem;
+        font-size: 1.8rem;
         padding: 1rem;
     }
     
     .card-texto{
-        padding: 1.5rem;
+        padding: 1.2rem;
         font-size: 1.2rem;
         text-align: justify;
-        height: 13.25rem;
+        height: 13rem;
     }
-}
+
 
 @media screen and (max-width: 1000px){
     .menu-nav a{
@@ -242,8 +249,7 @@ footer{
 
     .card{
         margin-bottom: 50px;
-        height: 600px;
-        width: 400px;
+        height: auto; 
     }
 
     .titulo-conteudo-principal{
@@ -251,12 +257,12 @@ footer{
     }
     
     .card-titulo-post{
-        font-size: 1.3rem;
+        font-size: 1.8rem;
     }
     
     .card-texto{
         padding: 10px;
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
  }
 
