--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -12,7 +12,8 @@
     max-width: 1680px;
     margin: 0 auto;
     display: flex;
-    gap:2%;
+    flex-wrap: wrap;
+    gap:1%;
     justify-content: space-around;
     align-items: center;
     padding: 1rem 2rem;
@@ -101,12 +102,11 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 700px;
-    border-radius: 5px;
-    width: 400px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    height: 600px;
+    border-radius: 3px;
+    width: 500px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8);
     background:rgb(255, 255, 255);
-    text-align: center;
     transition: all 0.5s ease;
 }
 
@@ -132,26 +132,24 @@ header{
     text-shadow: 0px 0px 5px black;
 }
 
-
-
 .card-img{
     width:100%;
     height: 230px
 }
 
 .card-titulo-post{
-    margin-top: 1rem;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
+    text-align: center;
     font-weight: bold;
     padding: 2px;
-    height: 7rem;
+    height: 3rem;
 }
 
 .card-texto{
     padding: 1.5rem;
     font-size: 1rem;
     line-height: 1.4rem;
-    margin-bottom: 20px;
+    /* margin-bottom: 10px; */
     text-align: justify;
 }
 
@@ -164,7 +162,7 @@ header{
     font-weight: 700;
     text-align: left;
     color: orange;
-    height: 2rem;
+    height: 1rem;
 }
 
 
@@ -190,7 +188,7 @@ footer{
 
  /* ========== RESPONSIVO ========== */
 
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1200px){
     .container{
         max-width: 100vw;
         flex-wrap: wrap;
@@ -206,7 +204,6 @@ footer{
 
     .card{
         margin-bottom: 50px;
-        height: auto;
         width: 380px;
     }
 
@@ -215,19 +212,16 @@ footer{
     }
     
     .card-titulo-post{
-        font-size: 1.8rem;
         padding: 1rem;
     }
     
     .card-texto{
         padding: 1.2rem;
-        font-size: 1.2rem;
         text-align: justify;
-        height: 13rem;
     }
 
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 980px){
     .menu-nav a{
         font-size: 1rem;
     }
@@ -249,7 +243,7 @@ footer{
 
     .card{
         margin-bottom: 50px;
-        height: auto; 
+        height: 600px; 
     }
 
     .titulo-conteudo-principal{
@@ -257,12 +251,12 @@ footer{
     }
     
     .card-titulo-post{
-        font-size: 1.8rem;
+        font-size: 1.2rem;
     }
     
     .card-texto{
         padding: 10px;
-        font-size: 1.2rem;
+        font-size: 0.9rem;
     }
  }
 
@@ -286,6 +280,7 @@ footer{
     .card{
         height: auto;
     }
+    
 }
 
 @media screen and (max-width: 400px){
